--- a/README
+++ b/README
@@ -9,6 +9,8 @@ Used API's
 	Google clousure compiler API
 	jquery UI API
 	Reveal API (http://www.zurb.com/playground/reveal-modal-plugin)
+	D3 API
 
 Other attributions
 	http://css-tricks.com/better-tabs-with-round-out-borders/
+	
